--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     </header>
     <div class="webcontent">
         <p class="heading">Summarising Legal Documents and Helping You Find the Truth</p>
-        <p class="smallheading">Powered by AI and Shivam, ishan, Kunal...</p>
+        <p class="smallheading">Powered by AI and Shivam, ishan, Kunal.</p>
         <button type="button" class="btn btn-primary mt-3" onclick="document.getElementById('storyForm').style.display = 'block';">Find the Truth Now</button>
     </div>
 
